--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-requirejs": "~0.4.0"
+    "grunt-contrib-requirejs": "~0.4.0",
+    "grunt-plato": "~0.2.0",
+    "grunt-contrib-clean": "~0.4.0"
   }
 }
