--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-requirejs": "~0.4.0",
     "grunt-plato": "~0.2.0",
-    "grunt-contrib-clean": "~0.4.0"
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-usemin": "~0.1.10",
+    "grunt-contrib": "~0.6.1"
   }
 }
